cmake_minimum_required(VERSION 3.6)
project(chronos_cli)

set(CMAKE_CXX_STANDARD 14)
set(SOURCE_FILES src/main.cpp src/http_requests.cpp src/http_requests.h)
set (Boost_USE_MULTITHREAD ON)
find_package(Boost 1.40 COMPONENTS REQUIRED system program_options)
find_package(Threads REQUIRED)
include_directories(${Boost_INCLUDE_DIR})
add_executable(chronos_cli ${SOURCE_FILES})
target_link_libraries(chronos_cli pthread)
target_link_libraries(chronos_cli ${Boost_LIBRARIES})